Пример вызова дочерней активности с ожиданием результата, передача параметров между активностями в обе стороны.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="settings">setting</string>
     <string name="help">Help</string>
     <string name="list_lands">Lands</string>
+    <string name="title_activity_cland_info">CActivityLandInfo</string>
 </resources>
